<resources>
    <string name="app_name">Deutsche Bank</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="users">Deutche Bank Users</string>
    <string name="user_detail">User Detail</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="address">Address:</string>
    <string name="phone">Phone:</string>
    <string name="company">Company:</string>
</resources>