<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="model"
            type="com.hamza.deutschebank.data.users.domain.Users" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_10"
    tools:context=".presentation.ui.features.users.fragments.UserDetailFragment">

    <include
        android:id="@+id/lay_header"
        layout="@layout/lay_header"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_name_heading"
        style="@style/text_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lay_header"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dimen_50"
        android:text="@string/name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_name"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_10"
        app:layout_constraintStart_toEndOf="@+id/tv_name_heading"
        app:layout_constraintTop_toTopOf="@+id/tv_name_heading"
        android:text="@{model.name}" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_email_heading"
        style="@style/text_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_heading"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dimen_10"
        android:text="@string/email" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_email"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_10"
        app:layout_constraintStart_toEndOf="@+id/tv_email_heading"
        app:layout_constraintTop_toTopOf="@+id/tv_email_heading"
        android:text="@{model.email}" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_phone_heading"
        style="@style/text_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_heading"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dimen_10"
        android:text="@string/phone" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_phone"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_10"
        app:layout_constraintStart_toEndOf="@+id/tv_phone_heading"
        app:layout_constraintTop_toTopOf="@+id/tv_phone_heading"
        android:text="@{model.phone}" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_address_heading"
        style="@style/text_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone_heading"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dimen_10"
        android:text="@string/address" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_address"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_10"
        app:layout_constraintStart_toEndOf="@+id/tv_address_heading"
        app:layout_constraintTop_toTopOf="@+id/tv_address_heading"
        android:text="@{model.street + `, ` + model.suite + `, ` + model.city}" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_company_heading"
        style="@style/text_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_address_heading"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dimen_10"
        android:text="@string/company" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_company"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_10"
        app:layout_constraintStart_toEndOf="@+id/tv_company_heading"
        app:layout_constraintTop_toTopOf="@+id/tv_company_heading"
        android:text="@{model.company}" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>